--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
   "author": "NVTRUONG",
   "license": "MIT",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.3",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
@@ -32,7 +33,10 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0"
   }
 }
