feat: Verify email and forgot password

--- a/Server/.env
+++ b/Server/.env
@@ -2,5 +2,10 @@ DATABASE_USERNAME = 'maverickong96'
 DATABASE_PASSWORD = 'truongnvgcd201597'
 DATABASE_NAME = 'db_dev'
 DATABASE_USER_COLLECTION = 'users'
-SECRET_PASSWORD = 'truongnvgcd201597@'
+SECRET_ACCESS_TOKEN_PASSWORD = 'truongnvgcd201597@'
+SECRET_REFRESH_TOKEN_PASSWORD = 'maverickong962002'
+SECRET_EMAIL_VERIFY_TOKEN_PASSWORD = 'axit962002'
+SECRET_FORGOT_PASSWORD_TOKEN = 'justinbieber962002'
 JWT_SECRET_KEY = 'b14%$i,K=/ZKRtQ'
+DATABASE_REFRESH_TOKEN_COLLECTION = 'refresh_token'
+SECRET_PASSWORD = 'truongnvgcd201597'
